--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChessUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Game of Chess" Height="600" Width="600"
+        Icon="Assets/chess_icon.ico">
     <Grid>
-
+        <Grid.Background>
+            <ImageBrush ImageSource="Assets/chess_board.png"/>
+        </Grid.Background>
     </Grid>
 </Window>
