feat(ChessUI): add methods, designs to show GameOver

--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -29,6 +29,9 @@
                          Columns="8"
                          RenderOptions.BitmapScalingMode="HighQuality">
             </UniformGrid>
+
+            <ContentControl x:Name="MenuContainer"/>
+
         </Grid>
     </Viewbox>
 </Window>
