--- a/ChessUI/PromotionMenu.xaml
+++ b/ChessUI/PromotionMenu.xaml
@@ -8,12 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Width="275"
         Height="125"
-        BorderThickness="5"
-        BorderBrush="LimeGreen"
-        CornerRadius="10">
+        BorderThickness="3"
+        BorderBrush="Black">
 
         <Border.Background>
-            <ImageBrush ImageSource="Assets/plantwall.jpg" RenderOptions.BitmapScalingMode="HighQuality"/>
+            <ImageBrush ImageSource="Assets/selectpiece.png"
+                        RenderOptions.BitmapScalingMode="HighQuality"
+                        Opacity="0.9"/>
         </Border.Background>
 
         <Grid RenderOptions.BitmapScalingMode="HighQuality">
@@ -22,15 +23,6 @@
                 <RowDefinition Height="1.5*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.RowSpan="1"
-               Text="SELECT A PIECE"                  
-               FontSize="30"
-               Foreground="Lime"
-               Background="ForestGreen"
-               FontFamily="OCR A Extended"
-               FontWeight="UltraBold" Margin="0,-5,0,5"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"/>
 
             <UniformGrid Grid.Row="1"
                  Rows="1"
@@ -38,13 +30,22 @@
                  Cursor="Hand">
                 <Image x:Name="QueenImg"
                MouseDown="QueenImg_MouseDown"
-               Source="Assets/white_queen.png"/>
+               Source="Assets/white_queen.png" RenderTransformOrigin="1.236,0.474" Margin="0,4,0,0"/>
                 <Image x:Name="BishopImg"
                MouseDown="BishopImg_MouseDown"
                Source="Assets/white_bishop.png"/>
                 <Image x:Name="KnightImg"
                MouseDown="KnightImg_MouseDown"
-               Source="Assets/white_knight.png"/>
+               Source="Assets/white_knight.png" RenderTransformOrigin="0.5,0.5" Margin="0,0,-9,-1">
+                    <Image.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="-0.228"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Image.RenderTransform>
+                </Image>
                 <Image x:Name="RookImg"
                MouseDown="RookImg_MouseDown"
                Source="Assets/white_rook.png"/>
