--- a/ChessUI/App.xaml
+++ b/ChessUI/App.xaml
@@ -4,10 +4,10 @@
              xmlns:local="clr-namespace:ChessUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <SolidColorBrush x:Key="StrokeColor">#260000</SolidColorBrush>
-        <ImageBrush x:Key="FillColor" ImageSource="Assets/sign.png" RenderOptions.BitmapScalingMode="HighQuality"></ImageBrush>
-        <SolidColorBrush x:Key="TextColor">#3d1d12</SolidColorBrush>
-        <SolidColorBrush x:Key="ButtonColor">#834d21</SolidColorBrush>
+        <SolidColorBrush x:Key="StrokeColor">black</SolidColorBrush>
+        <ImageBrush x:Key="FillColor" ImageSource="Assets/plantwall.jpg" RenderOptions.BitmapScalingMode="HighQuality"></ImageBrush>
+        <SolidColorBrush x:Key="TextColor">black</SolidColorBrush>
+        <SolidColorBrush x:Key="ButtonColor">silver</SolidColorBrush>
 
         <Style TargetType="Border" x:Key="BorderStyle">
             <Setter Property="BorderThickness" Value="4"/>
@@ -24,7 +24,7 @@
         </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="FontFamily" Value="OCR A Extended"/>
-            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="BorderThickness" Value="3"/>
             <Setter Property="BorderBrush" Value="{StaticResource StrokeColor}"/>
             <Setter Property="Background" Value="{StaticResource ButtonColor}"/>
             <Setter Property="Foreground" Value="{StaticResource StrokeColor}"/>
