--- a/ChessUI/GameOverMenu.xaml
+++ b/ChessUI/GameOverMenu.xaml
@@ -8,7 +8,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Width="275"
             Height="125"
-            Style="{StaticResource BorderStyle}">
+            Style="{StaticResource BorderStyle}"
+            Opacity="0.9">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -25,14 +26,14 @@
                        x:Name="WinnerText"
                        Text="WINNER TEXT"
                        Style="{StaticResource TextStyle}"
-                       FontSize="28" FontWeight="Bold"/>
+                       FontSize="30" FontWeight="ExtraBold"/>
             
             <TextBlock Grid.Row="1"
                        Grid.ColumnSpan="2"
                        x:Name="ReasonText"
                        Text="REASON TEXT"
                        Style="{StaticResource TextStyle}"
-                       FontSize="16" FontWeight="Bold"/>
+                       FontSize="14" FontWeight="Bold" FontFamily="Bahnschrift"/>
             
             <Button Grid.Row="2"
                     Content="RESTART"
